--- a/static/style_gpt.css
+++ b/static/style_gpt.css
@@ -49,6 +49,8 @@ body {
   border-radius: 6px;
   padding: 7px 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  /* always display on top of other elements */
+  z-index: 1;
 }
 
 .channel-select {
@@ -85,7 +87,7 @@ body {
 /* Chats container styling */
 .chat-container {
   overflow-y: auto;
-  max-height: 100vh;
+  max-height: 90vh;
   padding-bottom: 150px;
 }
 :where(.chat-container, textarea)::-webkit-scrollbar {
