--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>{% block title %}Luna A.I.{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style_gpt.css') }}">
+    <!-- Add image -->
+    <link rel="icon" href="{{ url_for('static', filename='/images/logo-white.png') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Fonts Link For Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
