--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
 
 {% block content %}
 <div class="sidebar">
-    <h2 class="text-center">Luna A.I.</h2>
+    <h2 class="text-center">
+        <!--<img src="{{ url_for('static', filename='images/logo-no-background.png') }}" alt="Luna A.I." class="logo" style='width:25px;height:25px;'>-->
+        Luna A.I.
+    </h2>
     <h3 class="text-center">Conversations</h3>
     <ul id="conversations-list">
         <li value="new_conversation" style="background-color:#1ea295">
